--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0091ea</color>
-    <color name="colorPrimaryDark">#4527a0</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryLight">#52c7b8</color>
+    <color name="colorPrimaryDark">#00675b</color>
+    <color name="secondaryColor">#00b5a3</color>
+    <color name="secondaryLightColor">#5be8d4</color>
+    <color name="secondaryDarkColor">#008474</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#888888</color>
+    <color name="colorAccent">#64ffda</color>
 </resources>
