--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryLight">#52c7b8</color>
-    <color name="colorPrimaryDark">#00675b</color>
-    <color name="secondaryColor">#00b5a3</color>
-    <color name="secondaryLightColor">#5be8d4</color>
-    <color name="secondaryDarkColor">#008474</color>
+    <color name="colorPrimary">#afb42b</color>
+    <color name="colorPrimaryLight">#ffffb5</color>
+    <color name="colorPrimaryDark">#7c8500</color>
     <color name="primaryTextColor">#000000</color>
-    <color name="secondaryTextColor">#888888</color>
-    <color name="colorAccent">#64ffda</color>
+    <color name="secondaryTextColor">#000000</color>
+    <color name="colorAccent">#afb42b</color>
+    <color name="colorAccentDark">#e4e65e</color>
+    <color name="colorAccentLight">#7c8500</color>
 </resources>
