--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
 
     <style name="DetailsLabelStyle">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textColor">@color/primaryTextColor</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_marginTop">14dp</item>
     </style>
