--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="sandwich"
-            type="com.udacity.sandwichclub.model.Sandwich"/>
+            type="com.udacity.sandwichclub.model.Sandwich" />
     </data>
 
     <ScrollView
@@ -17,7 +18,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:paddingBottom="@dimen/activity_vertical_padding"
             tools:context="com.udacity.sandwichclub.DetailActivity">
 
             <ImageView
@@ -32,26 +33,58 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_aka_label"
+                android:id="@+id/tv_description_label"
+                style="@style/DetailsLabelStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                style="@style/DetailsLabelStyle"
-                android:text="@string/detail_also_known_as_label"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/detail_description_label"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/image_iv" />
+
+            <View
+                android:id="@+id/divider_description"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_marginBottom="@dimen/spacing_8"
+                android:background="@color/colorPrimaryDark"
+                app:layout_constraintEnd_toEndOf="@id/tv_description_label"
+                app:layout_constraintStart_toStartOf="@id/tv_description_label"
+                app:layout_constraintTop_toBottomOf="@id/tv_description_label" />
+
+            <TextView
+                android:id="@+id/description_tv"
+                style="@style/DetailValueStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{sandwich.description}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tv_description_label"
+                app:layout_constraintTop_toBottomOf="@+id/divider_description"
+                tools:text="@string/detail_description_label" />
+
+            <TextView
+                android:id="@+id/tv_aka_label"
+                style="@style/DetailsLabelStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/detail_also_known_as_label"
+                app:layout_constraintStart_toStartOf="@+id/description_tv"
                 app:layout_constraintTop_toBottomOf="@+id/description_tv" />
 
             <View
+                android:id="@+id/divider_aka"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/spacing_8"
                 android:background="@color/colorPrimaryDark"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/also_known_tv" />
+                app:layout_constraintEnd_toEndOf="@id/tv_aka_label"
+                app:layout_constraintStart_toStartOf="@id/tv_aka_label"
+                app:layout_constraintTop_toBottomOf="@id/tv_aka_label" />
 
             <TextView
                 android:id="@+id/also_known_tv"
@@ -60,10 +93,9 @@
                 android:layout_height="wrap_content"
                 android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/tv_aka_label"
-                app:layout_constraintTop_toBottomOf="@+id/tv_aka_label"
-                tools:text="sansfdlfksjdflskdjfsldfkjfjfslkjsdlkfjsdlkfjsldkfjslkdjfslkdfjsldkfjsdfsdf" />
+                app:layout_constraintTop_toBottomOf="@+id/divider_aka"
+                tools:text="@string/detail_also_known_as_label" />
 
             <TextView
                 android:id="@+id/tv_origin_label"
@@ -75,7 +107,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/also_known_tv" />
 
             <View
-                android:id="@+id/view"
+                android:id="@+id/divider_origin"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:background="@color/colorPrimaryDark"
@@ -91,20 +123,20 @@
                 android:text="@{sandwich.placeOfOrigin}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_origin_label"
-                app:layout_constraintTop_toTopOf="@+id/view"
-                tools:text="e" />
+                app:layout_constraintTop_toTopOf="@+id/divider_origin"
+                tools:text="@string/detail_place_of_origin_label" />
 
             <TextView
                 android:id="@+id/tv_ingredients_label"
+                style="@style/DetailsLabelStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/DetailsLabelStyle"
                 android:text="@string/detail_ingredients_label"
-                app:layout_constraintStart_toStartOf="@+id/tv_origin_label"
+                app:layout_constraintStart_toStartOf="@+id/origin_tv"
                 app:layout_constraintTop_toBottomOf="@+id/origin_tv" />
 
             <View
-                android:id="@+id/view2"
+                android:id="@+id/divider_ingredients"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:background="@color/colorPrimaryDark"
@@ -119,37 +151,8 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_ingredients_label"
-                app:layout_constraintTop_toBottomOf="@+id/tv_ingredients_label"
-                tools:text="ssd, sdfsdfsdf, sfsdfsdfs, sdfsdfsdfsdf" />
-
-            <TextView
-                android:id="@+id/description_tv"
-                style="@style/DetailValueStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@{sandwich.description}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/tv_description_label"
-                app:layout_constraintTop_toBottomOf="@+id/tv_description_label"
-                tools:text="description" />
-
-            <TextView
-                android:id="@+id/tv_description_label"
-                style="@style/DetailsLabelStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/detail_description_label"
-                app:layout_constraintStart_toStartOf="@+id/tv_ingredients_label"
-                app:layout_constraintTop_toBottomOf="@+id/image_iv" />
-
-            <View
-                android:id="@+id/view23"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_marginTop="8dp"
-                android:background="@color/colorPrimaryDark"
-                app:layout_constraintTop_toBottomOf="@id/description_tv" />
+                app:layout_constraintTop_toBottomOf="@+id/divider_ingredients"
+                tools:text="@string/detail_ingredients_label" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </layout>
